# ErrorDashboardServer

./: .gitignore  Cargo.toml
migration/src/: lib.rs  m20230914_054832_create_user_table.rs  m20230921_034443_create_refresh_token_table.rs  m20231013_164343_create_error_table.rs
src/: main.rs  schema.rs
src/app/: mod.rs
src/config/: mod.rs
src/database/: mod.rs
src/dtos/: auth_dtos.rs  user_dtos.rs
src/handlers/: auth_handlers.rs  mod.rs  user_handlers.rs
src/middlewares/: auth_middleware.rs
src/models/: error_model.rs  mod.rs  refresh_token_model.rs  user_model.rs
src/routes/: auth_routes.rs  user_routes.rs
src/services/: auth_services.rs  mod.rs  user_services.rs
src/shared/utils/: errors.rs  jwt.rs
