[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
tokio_postgres = "0.7.8"
diesel = { version = "2.1.0", features = ["postgres"] }
anyhow = "1.0.75"
serde = "1.0.183"
bcrypt = "0.15.0"
